Fixes tab width on mobile

--- a/sass/tabs.scss
+++ b/sass/tabs.scss
@@ -35,7 +35,6 @@
         li {
             width: 50%;
             text-align: center;
-            width: 90%;
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
